--- a/action.yml
+++ b/action.yml
@@ -156,7 +156,7 @@ inputs:
   openai_heavy_model:
     required: false
     description: 'Model to use for complex tasks such as code reviews.'
-    default: 'gpt-4'
+    default: 'gpt-4o'
   openai_model_temperature:
     required: false
     description: 'Temperature for GPT model'
