--- a/action.yml
+++ b/action.yml
@@ -152,11 +152,11 @@ inputs:
     required: false
     description:
       'Model to use for simple tasks like summarizing diff on a file.'
-    default: 'gpt-35-turbo-instruct'
+    default: 'gpt-35-turbo'
   openai_heavy_model:
     required: false
     description: 'Model to use for complex tasks such as code reviews.'
-    default: 'gpt-35-turbo-instruct'
+    default: 'gpt-35-turbo'
   openai_model_temperature:
     required: false
     description: 'Temperature for GPT model'
