feat: changed action name

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'AI-based PR Reviewer & Summarizer with Chat Capabilities'
+name: 'Adobe AEM PR review bot'
 description: 'AI-based PR Reviewer & Summarizer with Chat Capabilities'
 branding:
   icon: 'git-merge'
