feat: changed action color

--- a/action.yml
+++ b/action.yml
@@ -2,7 +2,7 @@ name: 'Adobe AEM PR review bot'
 description: 'AI-based PR Reviewer & Summarizer with Chat Capabilities'
 branding:
   icon: 'git-merge'
-  color: 'orange'
+  color: 'red'
 author: 'Screens Team'
 inputs:
   debug:
